[tool.poetry]
name = "supabase"
version = "1.0.3"
description = "Supabase client for Python."
authors = ["Joel Lee <joel@joellee.org>", "Leon Fedden <leonfedden@gmail.com>", "Daniel Reinón García <danielreinon@outlook.com>", "Leynier Gutiérrez González <leynier41@gmail.com>", "Anand"]
homepage = "https://github.com/supabase-community/supabase-py"
repository = "https://github.com/supabase-community/supabase-py"
documentation = "https://github.com/supabase-community/supabase-py"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "2.0.1"
numpy = "1.24.3"
azure-storage-blob = "12.16.0"
h5py = "3.8.0"
plotly = "5.14.1"
scipy = "1.10.1"
pymap3d = "3.0.1"
python-dotenv = "1.0.0"
geojson = "3.0.1"
geopandas = "0.12.2"
shapely = "2.0.1"
Fiona = "1.9.3"
scikit-learn = "1.2.2"

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
pytest-cov = "4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "7.0.0"
sphinx_autodoc_typehints = "1.22"

[tool.poetry.group.contributor]
optional = true

[tool.poetry.group.contributor.dependencies]
black = "23.3.0"
isort = "5.12.0"
pydocstyle = "6.3.0"
pylint = "2.17.3"
docformatter = "1.6.4"

[tool.poetry.extra.contributor]
optional = true

[tool.poetry.group.extra.dependencies]
pyarrow = "12.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
